--- a/TrainTheTrainers/.classpath
+++ b/TrainTheTrainers/.classpath
@@ -33,6 +33,7 @@
 	<classpathentry kind="lib" path="jars/poi/SparseBitSet-1.2.jar"/>
 	<classpathentry kind="lib" path="jars/poi/xmlbeans-5.1.1.jar"/>
 	<classpathentry kind="lib" path="jars/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="jars/webdrivermanager-5.3.2.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/user/Downloads/selenium-server-standalone-3.141.59 (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
